Add messages for routeur/firewall configuration

--- a/lib/messagebundles/MessagesBundle_fr.properties
+++ b/lib/messagebundles/MessagesBundle_fr.properties
@@ -625,7 +625,7 @@ SEARCH_BROWSEHOST_DESC=Entrez l'adresse IP d'un de vos amis avec qui vous voulez
 #### SEARCH_BROWSEHOST_MYIP=When your friends want to connect to you, they should enter
 SEARCH_BROWSEHOST_MYIP=Si vos amis souhaitent se connecter à vous, ils peuvent entrer
 #### SEARCH_BROWSEHOST_FIREWALLED=Your computer is behind a firewall or router and cannot receive direct connections.
-#? SEARCH_BROWSEHOST_FIREWALLED=
+SEARCH_BROWSEHOST_FIREWALLED=Votre ordinateur est placé derrière un pare-feu ou un routeur et ne peut recevoir aucune connexion directe.
 #### SEARCH_BROWSEHOST_BUTTON=Direct Connect
 SEARCH_BROWSEHOST_BUTTON=Connexion directe
 #### SEARCH_WHATSNEW_HIDE_ADULT=Hide Adult Content
@@ -1569,9 +1569,9 @@ SPLASH_STATUS_COMPONENT_LOADING_SIMPP_MANAGER=Chargement des réglages de sécurit
 # Key/value pairs for the shutdown window
 ##################################################################
 #### SHUTDOWN_TITLE=Shutting down LimeWire...
-#? SHUTDOWN_TITLE=
+SHUTDOWN_TITLE=Arrêt de Limewire...
 #### SHUTDOWN_WAIT=Please wait while LimeWire shuts down...
-#? SHUTDOWN_WAIT=
+SHUTDOWN_WAIT=Veuillez patienter durant l'arrêt de Limewire...
 
 ##################################################################
 # Key/value pairs for the message displayed to prompt users to
@@ -2536,15 +2536,15 @@ OPTIONS_PORT_BOX_LABEL=Écouter le port\u00a0:
 # in the advanced panel in the options window
 ################################################################################
 #### OPTIONS_ROUTER_TITLE=Router Configuration
-#? OPTIONS_ROUTER_TITLE=
+OPTIONS_ROUTER_TITLE=Connexion par routeur
 #### OPTIONS_ROUTER_LABEL=LimeWire can configure itself to work from behind a firewall or router.  Using Universal Plug 'n Play (UPnP), LimeWire can automatically configure your router or firewall for optimal performance.  If your router does not support UPnP, LimeWire can be set to advertise an external port manually.  (You must also configure your router if you choose manual configuration.)
-#? OPTIONS_ROUTER_LABEL=
+OPTIONS_ROUTER_LABEL=Limewire peut se configurer lui-même pour opérer derrière un système pare-feu ou un routeur. Au moyen du protocole Plug'n Play Universel (UPnP), Limewire peut même configurer automatiquement votre routeur ou pare-feu pour des performances optimales, si ceux-ci supportent UPnP. Si ce n'est pas le cas, Limewire peut être réglé pour publier un port externe configuré manuellement. (Vous devrez alors configurer vous-même votre routeur si vous choisissez la configuration manuelle.)
 #### OPTIONS_ROUTER_UPNP=Use UPnP (Recommended)
-#? OPTIONS_ROUTER_UPNP=
+OPTIONS_ROUTER_UPNP=Utiliser UPnP (recommandé)
 #### OPTIONS_ROUTER_PORT=Manual Port Forward
-#? OPTIONS_ROUTER_PORT=
+OPTIONS_ROUTER_PORT=Liaison de ports configurée manuellement.
 #### OPTIONS_ROUTER_NOTHING=Do Nothing (Not Recommended)
-#? OPTIONS_ROUTER_NOTHING=
+OPTIONS_ROUTER_NOTHING=Ne rien faire (non recommandé)
 
 ################################################################################
 # Key/Value pairs for the options for setting the connection strings
