--- a/lib/installbundles/MessagesBundle.properties
+++ b/lib/installbundles/MessagesBundle.properties
@@ -14,7 +14,9 @@ CLOSE_LIMEWIRE="An older version of LimeWire appears to be running. You must exi
 
 MUI_TEXT_WELCOME_INFO_TITLE="Welcome to ${PRODUCT}"
 
-PURCHASING=purchasing CHOOSING=choosing
+PURCHASING=purchasing 
+
+CHOOSING=choosing
 
 MUI_TEXT_WELCOME_INFO_TEXT="Thank you for $(BOUGHT) ${PRODUCT}, the most advanced file sharing program on the planet.  Please click Next to begin installation." 
 
