--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -710,6 +710,10 @@ SETUP_SPEED_LABEL=Please choose the speed of your Internet connection. Setting t
 SETUP_STARTUP_TITLE=System Startup
 SETUP_STARTUP_LABEL=Would you like LimeWire to start when you log into your computer? This will cause LimeWire to start faster when you use it later.
 SETUP_STARTUP_CHECKBOX=Start Automatically
+SETUP_FIREWALL_TITLE_ONE=Firewall Preparation
+SETUP_FIREWALL_LABEL_ONE=LimeWire needs to receive information from the network in order to function properly.  When you click next, some firewalls will ask your permission for LimeWire to use the network.  You should allow LimeWire full access.  Below is a picture of Windows Firewall asking to unblock LimeWire.  Your firewall software may look different.
+SETUP_FIREWALL_TITLE_TWO=Firewall Warning
+SETUP_FIREWALL_LABEL_TWO=LimeWire is now requesting permission to use the network.  If nothing appears, LimeWire has succesfully started listening to the network.  If your software does pop up a warning, please allow LimeWire full access for best performance.  Click 'Next' when finished.
 SETUP_SCAN_TITLE=Scan for Files
 SETUP_SCAN_LABEL=Would you like LimeWire to quickly scan your hard drive for other media files? You will have the opportunity to specify which directories you would like to share when the scan is complete.
 SETUP_WAIT_TITLE=Scanning Hard Drive
