--- a/lib/messagebundles/MessagesBundle_da.properties
+++ b/lib/messagebundles/MessagesBundle_da.properties
@@ -1255,6 +1255,14 @@ SETUP_STARTUP_TITLE=System Startup
 SETUP_STARTUP_LABEL=Vil du gerne have at LimeWire starter, når du logger på din computer? Det vil få LimeWire til at starte hurtigere, når du anvender den senere.
 #### SETUP_STARTUP_CHECKBOX=Start Automatically
 SETUP_STARTUP_CHECKBOX=Start automatisk
+#### SETUP_FIREWALL_TITLE_ONE=Firewall Preparation
+#? SETUP_FIREWALL_TITLE_ONE=
+#### SETUP_FIREWALL_LABEL_ONE=LimeWire needs to receive information from the network in order to function properly.  When you click next, some firewalls will ask your permission for LimeWire to use the network.  You should allow LimeWire full access.  Below is a picture of Windows Firewall asking to unblock LimeWire.  Your firewall software may look different.
+#? SETUP_FIREWALL_LABEL_ONE=
+#### SETUP_FIREWALL_TITLE_TWO=Firewall Warning
+#? SETUP_FIREWALL_TITLE_TWO=
+#### SETUP_FIREWALL_LABEL_TWO=LimeWire is now requesting permission to use the network.  If nothing appears, LimeWire has succesfully started listening to the network.  If your software does pop up a warning, please allow LimeWire full access for best performance.  Click 'Next' when finished.
+#? SETUP_FIREWALL_LABEL_TWO=
 #### SETUP_SCAN_TITLE=Scan for Files
 SETUP_SCAN_TITLE=Søg efter filer
 #### SETUP_SCAN_LABEL=Would you like LimeWire to quickly scan your hard drive for other media files? You will have the opportunity to specify which directories you would like to share when the scan is complete.
