--- a/lib/messagebundles/MessagesBundle_ja.properties
+++ b/lib/messagebundles/MessagesBundle_ja.properties
@@ -1255,6 +1255,14 @@ SETUP_STARTUP_TITLE=\u30b7\u30b9\u30c6\u30e0\u8d77\u52d5\u6642
 SETUP_STARTUP_LABEL=\u30b3\u30f3\u30d4\u30e5\u30fc\u30bf\u30fc\u306b\u30ed\u30b0\u30a4\u30f3\u3057\u305f\u6642\u306b LimeWire \u3092\u81ea\u52d5\u7684\u306b\u8d77\u52d5\u3055\u305b\u307e\u3059\u304b\u3002
 #### SETUP_STARTUP_CHECKBOX=Start Automatically
 SETUP_STARTUP_CHECKBOX=\u81ea\u52d5\u3067\u8d77\u52d5
+#### SETUP_FIREWALL_TITLE_ONE=Firewall Preparation
+#? SETUP_FIREWALL_TITLE_ONE=
+#### SETUP_FIREWALL_LABEL_ONE=LimeWire needs to receive information from the network in order to function properly.  When you click next, some firewalls will ask your permission for LimeWire to use the network.  You should allow LimeWire full access.  Below is a picture of Windows Firewall asking to unblock LimeWire.  Your firewall software may look different.
+#? SETUP_FIREWALL_LABEL_ONE=
+#### SETUP_FIREWALL_TITLE_TWO=Firewall Warning
+#? SETUP_FIREWALL_TITLE_TWO=
+#### SETUP_FIREWALL_LABEL_TWO=LimeWire is now requesting permission to use the network.  If nothing appears, LimeWire has succesfully started listening to the network.  If your software does pop up a warning, please allow LimeWire full access for best performance.  Click 'Next' when finished.
+#? SETUP_FIREWALL_LABEL_TWO=
 #### SETUP_SCAN_TITLE=Scan for Files
 SETUP_SCAN_TITLE=\u30d5\u30a1\u30a4\u30eb\u3092\u691c\u7d22
 #### SETUP_SCAN_LABEL=Would you like LimeWire to quickly scan your hard drive for other media files? You will have the opportunity to specify which directories you would like to share when the scan is complete.
