--- a/lib/messagebundles/MessagesBundle_no.properties
+++ b/lib/messagebundles/MessagesBundle_no.properties
@@ -1255,6 +1255,14 @@ SETUP_STARTUP_TITLE=Systemstart
 SETUP_STARTUP_LABEL=Vil du at LimeWire skal starte når du logger deg på maskinen din? Dette vil få LimeWire til å starte raskere når du bruken det senere.
 #### SETUP_STARTUP_CHECKBOX=Start Automatically
 SETUP_STARTUP_CHECKBOX=Start automatisk
+#### SETUP_FIREWALL_TITLE_ONE=Firewall Preparation
+#? SETUP_FIREWALL_TITLE_ONE=
+#### SETUP_FIREWALL_LABEL_ONE=LimeWire needs to receive information from the network in order to function properly.  When you click next, some firewalls will ask your permission for LimeWire to use the network.  You should allow LimeWire full access.  Below is a picture of Windows Firewall asking to unblock LimeWire.  Your firewall software may look different.
+#? SETUP_FIREWALL_LABEL_ONE=
+#### SETUP_FIREWALL_TITLE_TWO=Firewall Warning
+#? SETUP_FIREWALL_TITLE_TWO=
+#### SETUP_FIREWALL_LABEL_TWO=LimeWire is now requesting permission to use the network.  If nothing appears, LimeWire has succesfully started listening to the network.  If your software does pop up a warning, please allow LimeWire full access for best performance.  Click 'Next' when finished.
+#? SETUP_FIREWALL_LABEL_TWO=
 #### SETUP_SCAN_TITLE=Scan for Files
 SETUP_SCAN_TITLE=Søk etter filer
 #### SETUP_SCAN_LABEL=Would you like LimeWire to quickly scan your hard drive for other media files? You will have the opportunity to specify which directories you would like to share when the scan is complete.
