--- a/lib/messagebundles/MessagesBundle_fr.properties
+++ b/lib/messagebundles/MessagesBundle_fr.properties
@@ -1256,13 +1256,13 @@ SETUP_STARTUP_LABEL=Voudriez-vous que LimeWire démarre automatiquement lorsque v
 #### SETUP_STARTUP_CHECKBOX=Start Automatically
 SETUP_STARTUP_CHECKBOX=Démarrer automatiquement
 #### SETUP_FIREWALL_TITLE_ONE=Firewall Preparation
-#? SETUP_FIREWALL_TITLE_ONE=
+SETUP_FIREWALL_TITLE_ONE=Préparation du pare-feu
 #### SETUP_FIREWALL_LABEL_ONE=LimeWire needs to receive information from the network in order to function properly.  When you click next, some firewalls will ask your permission for LimeWire to use the network.  You should allow LimeWire full access.  Below is a picture of Windows Firewall asking to unblock LimeWire.  Your firewall software may look different.
-#? SETUP_FIREWALL_LABEL_ONE=
+SETUP_FIREWALL_LABEL_ONE=Limewire a besoin de quelques informations sur votre accès réseau afin de fonctionner de façon optimale. Lorsque vous cliquerez «\u00a0Suivant\u00a0», certains pare-feux vous demanderont votre autorisation pour que LimeWire accède au réseau. Vous devriez autoriser l'accès complet à Limewire. Ci-dessous, une image montre le dialogue d'autorisation du Pare-feu Windows vous demandant de débloquer LimeWire. Votre logiciel pare-feu peut afficher un dialogue différent.
 #### SETUP_FIREWALL_TITLE_TWO=Firewall Warning
-#? SETUP_FIREWALL_TITLE_TWO=
+SETUP_FIREWALL_TITLE_TWO=Avertissement du pare-feu
 #### SETUP_FIREWALL_LABEL_TWO=LimeWire is now requesting permission to use the network.  If nothing appears, LimeWire has succesfully started listening to the network.  If your software does pop up a warning, please allow LimeWire full access for best performance.  Click 'Next' when finished.
-#? SETUP_FIREWALL_LABEL_TWO=
+SETUP_FIREWALL_LABEL_TWO=Limewire est en train de demander la permission d'utiliser le réseau. Si rien n'apparaît, Limewire est parvenu à lancer l'écoute du réseau. Si votre logiciel n'affiche aucun dialogue d'alerte, veuillez donner l'accès complet à Limewire pour de meilleurs performances. Cliquez «\u00a0Suivant\u00a0» une fois terminé.
 #### SETUP_SCAN_TITLE=Scan for Files
 SETUP_SCAN_TITLE=Recherche des fichiers
 #### SETUP_SCAN_LABEL=Would you like LimeWire to quickly scan your hard drive for other media files? You will have the opportunity to specify which directories you would like to share when the scan is complete.
