--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -57,6 +57,16 @@ GENERAL_BROWSE_BUTTON_LABEL=Browse...
 GENERAL_BROWSE_HOST_LABEL=Browse Host
 GENERAL_BROWSE_HOST_TIP=View All Files on the Selected Computer
 
+################################################################################
+# Keys/value pairs for right-click context menus.
+################################################################################
+CONTEXT_MENU_UNDO=Undo
+CONTEXT_MENU_CUT=Cut
+CONTEXT_MENU_COPY=Copy
+CONTEXT_MENU_PASTE=Paste
+CONTEXT_MENU_DELETE=Delete
+CONTEXT_MENU_SELECT_ALL=Select All
+
 #Options
 OPTIONS_BUTTONS_OK_LABEL=OK
 OPTIONS_BUTTONS_OK_TIP=Apply Your Changes and Close Window
