synchronizing message bundles.

--- a/lib/messagebundles/MessagesBundle_ar.properties
+++ b/lib/messagebundles/MessagesBundle_ar.properties
@@ -72,6 +72,22 @@ GENERAL_BROWSE_HOST_LABEL=\u0627\u0633\u062a\u0639\u0631\u0627\u0636 \u0627\u064
 #### GENERAL_BROWSE_HOST_TIP=View All Files on the Selected Computer
 GENERAL_BROWSE_HOST_TIP=\u0639\u0631\u0636 \u062c\u0645\u064a\u0639 \u0627\u0644\u0645\u0644\u0641\u0627\u062a \u0639\u0644\u0649 \u0627\u0644\u0643\u0645\u0628\u064a\u0648\u062a\u0631 \u0627\u0644\u062d\u0627\u0644\u064a.
 
+################################################################################
+# Keys/value pairs for right-click context menus.
+################################################################################
+#### CONTEXT_MENU_UNDO=Undo
+#? CONTEXT_MENU_UNDO=
+#### CONTEXT_MENU_CUT=Cut
+#? CONTEXT_MENU_CUT=
+#### CONTEXT_MENU_COPY=Copy
+#? CONTEXT_MENU_COPY=
+#### CONTEXT_MENU_PASTE=Paste
+#? CONTEXT_MENU_PASTE=
+#### CONTEXT_MENU_DELETE=Delete
+#? CONTEXT_MENU_DELETE=
+#### CONTEXT_MENU_SELECT_ALL=Select All
+#? CONTEXT_MENU_SELECT_ALL=
+
 #Options
 #### OPTIONS_BUTTONS_OK_LABEL=OK
 OPTIONS_BUTTONS_OK_LABEL=\u0645\u0648\u0627\u0641\u0642
