--- a/lib/messagebundles/MessagesBundle_hi.properties
+++ b/lib/messagebundles/MessagesBundle_hi.properties
@@ -72,6 +72,22 @@ GENERAL_BROWSE_HOST_LABEL=\u092e\u0947\u091c\u093c\u092c\u093e\u0928 \u092c\u094
 #### GENERAL_BROWSE_HOST_TIP=View All Files on the Selected Computer
 GENERAL_BROWSE_HOST_TIP=\u091a\u0941\u0928\u0947 \u0939\u0941\u090f \u0915\u0902\u092a\u094d\u092f\u0942\u091f\u0930 \u0915\u0940 \u0938\u093e\u0930\u0940 \u092b\u093e\u0907\u0932\u0947\u0902 \u0926\u0947\u0916\u0947\u0902
 
+################################################################################
+# Keys/value pairs for right-click context menus.
+################################################################################
+#### CONTEXT_MENU_UNDO=Undo
+#? CONTEXT_MENU_UNDO=
+#### CONTEXT_MENU_CUT=Cut
+#? CONTEXT_MENU_CUT=
+#### CONTEXT_MENU_COPY=Copy
+#? CONTEXT_MENU_COPY=
+#### CONTEXT_MENU_PASTE=Paste
+#? CONTEXT_MENU_PASTE=
+#### CONTEXT_MENU_DELETE=Delete
+#? CONTEXT_MENU_DELETE=
+#### CONTEXT_MENU_SELECT_ALL=Select All
+#? CONTEXT_MENU_SELECT_ALL=
+
 #Options
 #### OPTIONS_BUTTONS_OK_LABEL=OK
 OPTIONS_BUTTONS_OK_LABEL=\u0920\u0940\u0915
