--- a/lib/messagebundles/MessagesBundle_iw.properties
+++ b/lib/messagebundles/MessagesBundle_iw.properties
@@ -72,6 +72,22 @@ GENERAL_BROWSE_HOST_LABEL=\u05e2\u05d9\u05d5\u05df \u05d1\u05ea\u05d5\u05da \u05
 #### GENERAL_BROWSE_HOST_TIP=View All Files on the Selected Computer
 GENERAL_BROWSE_HOST_TIP=\u05d4\u05e6\u05d2 \u05db\u05dc \u05d4\u05e7\u05d1\u05e6\u05d9\u05dd \u05e9\u05e0\u05d1\u05d7\u05e8\u05d5.
 
+################################################################################
+# Keys/value pairs for right-click context menus.
+################################################################################
+#### CONTEXT_MENU_UNDO=Undo
+#? CONTEXT_MENU_UNDO=
+#### CONTEXT_MENU_CUT=Cut
+#? CONTEXT_MENU_CUT=
+#### CONTEXT_MENU_COPY=Copy
+#? CONTEXT_MENU_COPY=
+#### CONTEXT_MENU_PASTE=Paste
+#? CONTEXT_MENU_PASTE=
+#### CONTEXT_MENU_DELETE=Delete
+#? CONTEXT_MENU_DELETE=
+#### CONTEXT_MENU_SELECT_ALL=Select All
+#? CONTEXT_MENU_SELECT_ALL=
+
 #Options
 #### OPTIONS_BUTTONS_OK_LABEL=OK
 OPTIONS_BUTTONS_OK_LABEL=\u05d0\u05d9\u05e9\u05d5\u05e8
