--- a/lib/messagebundles/MessagesBundle_fr.properties
+++ b/lib/messagebundles/MessagesBundle_fr.properties
@@ -1,5 +1,5 @@
 ################################################################################
-# Messages Bundle for LimeWire 4.3.3
+# Messages Bundle for LimeWire 4.4.4
 # Specialization for: French - France
 # Maintained by the LimeWire Project team.
 ################################################################################
@@ -76,17 +76,17 @@ GENERAL_BROWSE_HOST_TIP=Visualise tous les fichiers partagés sur l'hôte sélectio
 # Keys/value pairs for right-click context menus.
 ################################################################################
 #### CONTEXT_MENU_UNDO=Undo
-#? CONTEXT_MENU_UNDO=
+CONTEXT_MENU_UNDO=Annuler
 #### CONTEXT_MENU_CUT=Cut
-#? CONTEXT_MENU_CUT=
+CONTEXT_MENU_CUT=Couper
 #### CONTEXT_MENU_COPY=Copy
-#? CONTEXT_MENU_COPY=
+CONTEXT_MENU_COPY=Copier
 #### CONTEXT_MENU_PASTE=Paste
-#? CONTEXT_MENU_PASTE=
+CONTEXT_MENU_PASTE=Coller
 #### CONTEXT_MENU_DELETE=Delete
-#? CONTEXT_MENU_DELETE=
+CONTEXT_MENU_DELETE=Supprimer
 #### CONTEXT_MENU_SELECT_ALL=Select All
-#? CONTEXT_MENU_SELECT_ALL=
+CONTEXT_MENU_SELECT_ALL=Sélectionner tout
 
 #Options
 #### OPTIONS_BUTTONS_OK_LABEL=OK
