Additional correcttions by Dutch translator Jan Willem Lageman

--- a/lib/messagebundles/MessagesBundle_nl.properties
+++ b/lib/messagebundles/MessagesBundle_nl.properties
@@ -1,7 +1,7 @@
 ################################################################################
 # Messages Bundle for LimeWire 4.4.5
 # Specialization for: Dutch - Netherlands, Belgium
-# Thanks to: Willem Broekema, Edwin van Ouwerkerk Moria, Reinier Bergwerf, Jan Willem
+# Thanks to: Willem Broekema, Edwin van Ouwerkerk Moria, Reinier Bergwerf, Jan Willem Lageman
 ################################################################################
 LOCALE_LANGUAGE_CODE=nl
 LOCALE_LANGUAGE_NAME=Nederlands
@@ -202,7 +202,7 @@ TOTD_CLOSE=Sluiten
 # Key/value pairs for the Getting Started image
 ###################################################################
 #### GETTING_STARTED_TITLE=Getting Started
-GETTING_STARTED_TITLE=Hoe te starten!!
+GETTING_STARTED_TITLE=Hoe te starten met LimeWire!
 #### GETTING_STARTED_CONTENTS=To start using LimeWire, find the text field on the left, type in what you are looking for and click the "Search" button. If you are looking for only one type of content (music, video, etc...), you can narrow your search results by using the buttons above the text field.
 GETTING_STARTED_CONTENTS=Gebruik LimeWire, zoek het zoekveld aan de linker kant, toets in wat je zoekt en klik dan op "Zoeken". Als je op zoek bent naar iets specifieks als (muziek, video, enz...), dan kan je het zoeken specifiek bepalen door gebruik te maken van de knoppen boven het tekst veld.
 
@@ -212,7 +212,7 @@ GETTING_STARTED_CONTENTS=Gebruik LimeWire, zoek het zoekveld aan de linker kant,
 #### GOING_PRO_TITLE=The Most Advanced File Sharing Program on the Planet!
 GOING_PRO_TITLE=De meest geavanceerde bestanden delen op het NET!
 #### GOING_PRO_DESCRIPTION=Better search results\nTurbo charged download speeds\nConnections to more sources\nPersonalized tech support\nSix months of free updates
-GOING_PRO_DESCRIPTION=Het betere zoeken werkt in\nde Turbo geladen Verbindingen van downloadsnelheden \nvan meer bronnen\nGepersonaliseerde technologiesteun\nvoor Zes maanden vrije updates
+GOING_PRO_DESCRIPTION=Het betere zoeken werkt in\nde Turbo geladen Verbindingen met downloadsnelheden \nvan meer bronnen\nGepersonaliseerde technologiesteun\nmet Zes maanden vrije updates
 
 ###################################################################
 # Key/value pairs for the Windows system tray
@@ -224,7 +224,7 @@ TRAY_RESTORE_LABEL=Herstellen
 #### TRAY_ABOUT_LABEL=About
 TRAY_ABOUT_LABEL=Over...
 #### TRAY_EXIT_LATER_LABEL=Exit after Transfers
-TRAY_EXIT_LATER_LABEL=Afsluiten na gegevensoverdracht
+TRAY_EXIT_LATER_LABEL=Afsluiten na de gegevensoverdracht
 #### TRAY_EXIT_LABEL=Exit
 TRAY_EXIT_LABEL=Afsluiten
 
@@ -388,7 +388,7 @@ MENU_VIEW_SHOW_HIDE_TITLE=Toon/Verberg
 #### MENU_VIEW_SHOW_HIDE_TITLE_MNEMONIC=W
 MENU_VIEW_SHOW_HIDE_TITLE_MNEMONIC=L
 #### MENU_VIEW_SHOW_HIDE_ACCESSIBLE=Show or Hide individual tabs
-MENU_VIEW_SHOW_HIDE_ACCESSIBLE=Toon/Verberg individueel tabs
+MENU_VIEW_SHOW_HIDE_ACCESSIBLE=Toon/Verberg individueele tabs
 #### MENU_VIEW_MONITOR=Monitor
 MENU_VIEW_MONITOR=Overzicht
 #### MENU_VIEW_MONITOR_MNEMONIC=M
@@ -627,17 +627,17 @@ SEARCH_MULTIPLE_HOSTS=Meerderen
 #### AUTO_DL_CHECKBOX_STRING=Automatically Download
 AUTO_DL_CHECKBOX_STRING=Automatisch downloaden
 #### AUTO_DL_CHECKBOX_TOOLTIP=LimeWire will download your files for you
-AUTO_DL_CHECKBOX_TOOLTIP=LimeWire zal uw bestanden voor u downloaden.
+AUTO_DL_CHECKBOX_TOOLTIP=LimeWire zal de bestanden voor u downloaden.
 #### SEARCH_TYPE_KEYWORD=Keyword
 SEARCH_TYPE_KEYWORD=Sleutelwoord
 #### SEARCH_TYPE_WHATSNEW=What's New
 SEARCH_TYPE_WHATSNEW=Wat is er nieuw
 #### SEARCH_TYPE_BROWSEHOST=Direct Connect
-SEARCH_TYPE_BROWSEHOST=Direct Contact
+SEARCH_TYPE_BROWSEHOST=Direkt Kontakt
 #### SEARCH_BROWSEHOST_TITLE=Got Friends?
 SEARCH_BROWSEHOST_TITLE=Heb je kennissen
 #### SEARCH_BROWSEHOST_DESC=Enter the IP address of a friend you'd like to connect to, click 'Direct Connect', and LimeWire will try to browse the files of that user.
-SEARCH_BROWSEHOST_DESC=Voer het IP adres van een kennis in om te verbinden, klik ' Direct verbinden ', en LimeWire zal proberen om de bestanden van die gebruiker te doorbladeren.
+SEARCH_BROWSEHOST_DESC=Voer het IP adres van een kennis in om te verbinden, klik ' Direkt Kontakt ', en LimeWire zal proberen om de bestanden van die gebruiker te doorbladeren.
 #### SEARCH_BROWSEHOST_MYIP=When your friends want to connect to you, they should enter
 SEARCH_BROWSEHOST_MYIP=Wanneer uw kennissen met u willen verbinden, moeten zij enter in drukken
 #### SEARCH_BROWSEHOST_FIREWALLED=Your computer is behind a firewall or router and cannot receive direct connections.
@@ -663,7 +663,7 @@ SEARCH_FILTER_RESULTS=Filter resultaat:
 #### SEARCH_BACK_TO_SEARCH=Back To Search
 SEARCH_BACK_TO_SEARCH=Terug naar zoeken
 #### SEARCH_BLOCK_HOST=Do you want to block search results from the host at
-SEARCH_BLOCK_HOST=Wilt u onderzoeksresultaten van de host blokkeren
+SEARCH_BLOCK_HOST=Wilt u de zoek resultaten van de host blokkeren
 
 #Media Types
 #### MEDIA_ANY_TYPE=Any Type
@@ -736,7 +736,7 @@ DOWNLOAD_CLEAR_BUTTON_LABEL=Wis inactief
 #### DOWNLOAD_CLEAR_BUTTON_TIP=Remove Inactive Downloads
 DOWNLOAD_CLEAR_BUTTON_TIP=Verwijder inactieve download uit het overzicht.
 #### DOWNLOAD_PAUSE_BUTTON_LABEL=Pause
-DOWNLOAD_PAUSE_BUTTON_LABEL=Onderbreek
+DOWNLOAD_PAUSE_BUTTON_LABEL=Pauze
 #### DOWNLOAD_PAUSE_BUTTON_TIP=Pause the Selected Downloads
 DOWNLOAD_PAUSE_BUTTON_TIP=Pauzeer de Geselecteerde Download
 
@@ -753,7 +753,7 @@ LIBRARY_REFRESH_BUTTON_LABEL=Vernieuwen
 #### LIBRARY_REFRESH_BUTTON_TIP=Reload Shared Directories
 LIBRARY_REFRESH_BUTTON_TIP=Vernieuw directory-overzicht.
 #### LIBRARY_EXPLORE_BUTTON_LABEL=Explore
-LIBRARY_EXPLORE_BUTTON_LABEL=Onderzoek
+LIBRARY_EXPLORE_BUTTON_LABEL=Explore
 #### LIBRARY_EXPLORE_BUTTON_TIP=Open Library Directory
 LIBRARY_EXPLORE_BUTTON_TIP=Open Mediatheek directory
 #### LIBRARY_PLAYLIST_BUTTON_LABEL=Enqueue
@@ -776,7 +776,7 @@ PLAYLIST_LOAD_BUTTON_LABEL=Openen...
 #### PLAYLIST_LOAD_BUTTON_TIP=Open an Existing Play List
 PLAYLIST_LOAD_BUTTON_TIP=Open nieuwe afspeellijst.
 #### PLAYLIST_SAVE_BUTTON_LABEL=Save As...
-PLAYLIST_SAVE_BUTTON_LABEL=Opslaan...
+PLAYLIST_SAVE_BUTTON_LABEL=Opslaan als...
 #### PLAYLIST_SAVE_BUTTON_TIP=Save the Current Play List to a File
 PLAYLIST_SAVE_BUTTON_TIP=Sla deze afspeellijst op.
 #### PLAYLIST_DELETE_BUTTON_LABEL=Remove
@@ -794,7 +794,7 @@ MEDIA_PLAYER_DEFAULT_STRING=LimeWire MP3-speler
 #### MEDIA_PLAY_BUTTON_TIP=Play
 MEDIA_PLAY_BUTTON_TIP=Afspeel
 #### MEDIA_PAUSE_BUTTON_TIP=Pause
-MEDIA_PAUSE_BUTTON_TIP=Onderbreek
+MEDIA_PAUSE_BUTTON_TIP=Pauze
 #### MEDIA_STOP_BUTTON_TIP=Stop
 MEDIA_STOP_BUTTON_TIP=Stop
 #### MEDIA_FORWARD_BUTTON_TIP=Next
@@ -804,7 +804,7 @@ MEDIA_REWIND_BUTTON_TIP=Vorige
 
 #anu added
 #### PASSWORD_DIALOG_USERNAME_FIELD_LABEL=Username
-PASSWORD_DIALOG_USERNAME_FIELD_LABEL=Naam
+PASSWORD_DIALOG_USERNAME_FIELD_LABEL=Gebruiker naam
 #### PASSWORD_DIALOG_PASSWORD_FIELD_LABEL=Password
 PASSWORD_DIALOG_PASSWORD_FIELD_LABEL=Wachtwoord
 
@@ -832,11 +832,11 @@ STATISTICS_CONNECTION_CONNECTING_TIP=U bent momenteel verbonden met het netwerk.
 #### STATISTICS_CONNECTION_POOR=Poor
 STATISTICS_CONNECTION_POOR=Slecht 
 #### STATISTICS_CONNECTION_POOR_TIP=You are connected to few hosts and have an unstable connection the network.
-STATISTICS_CONNECTION_POOR_TIP=U bent verbonden met host en hebt een onstabiele verbinding het netwerk.
+STATISTICS_CONNECTION_POOR_TIP=U bent verbonden met de host en hebt een onstabiele verbinding met het netwerk.
 #### STATISTICS_CONNECTION_FAIR=Fair
 STATISTICS_CONNECTION_FAIR=Redelijk
 #### STATISTICS_CONNECTION_FAIR_TIP=Your connection to the network is getting stronger.
-STATISTICS_CONNECTION_FAIR_TIP=Uw verbinding aan het netwerk wordt sterker.
+STATISTICS_CONNECTION_FAIR_TIP=Uw verbinding met het netwerk wordt sterker.
 #### STATISTICS_CONNECTION_GOOD=Good
 STATISTICS_CONNECTION_GOOD=Beter
 #### STATISTICS_CONNECTION_GOOD_TIP=You are not yet fully connected to the network, but have a very good connection.
@@ -844,9 +844,9 @@ STATISTICS_CONNECTION_GOOD_TIP=U bent nog niet volledig verbonden met het netwer
 #### STATISTICS_CONNECTION_EXCELLENT=Excellent
 STATISTICS_CONNECTION_EXCELLENT=Zeer goed
 #### STATISTICS_CONNECTION_EXCELLENT_TIP=Your connection to the network is very strong.
-STATISTICS_CONNECTION_EXCELLENT_TIP=Uw verbinding aan het netwerk is zeer sterk.
+STATISTICS_CONNECTION_EXCELLENT_TIP=Uw verbinding met het netwerk is zeer sterk.
 #### STATISTICS_CONNECTION_TURBO_CHARGED=TurboCharged
-STATISTICS_CONNECTION_TURBO_CHARGED=Allerbeste verbinding
+STATISTICS_CONNECTION_TURBO_CHARGED=Turbo snelheid
 #### STATISTICS_CONNECTION_TURBO_CHARGED_TIP_FREE=You can experience TurboCharged connections all the time with LimeWire Pro.
 STATISTICS_CONNECTION_TURBO_CHARGED_TIP_FREE=U kunt TurboCharged verbindingen ervaren met LimeWire Pro.
 #### STATISTICS_CONNECTION_TURBO_CHARGED_TIP_PRO=Your connection to the network is extremely strong.
@@ -856,7 +856,7 @@ STATISTICS_CONNECTION_QUALITY=Verbindind :
 #### STATISTICS_CONNECTION_IDLE=Idle
 STATISTICS_CONNECTION_IDLE=Ideaal
 #### STATISTICS_CONNECTION_WAKING_UP=Waking Up
-STATISTICS_CONNECTION_WAKING_UP=Opstarten
+STATISTICS_CONNECTION_WAKING_UP=Opstarten uit slaapstand
 #### STATISTICS_CONNECTION_WAKING_UP_TIP=LimeWire is waking up from sleep mode.
 STATISTICS_CONNECTION_WAKING_UP_TIP=LimeWire start van uit standby.
 
@@ -868,7 +868,7 @@ STATISTICS_CONNECTION_WAKING_UP_TIP=LimeWire start van uit standby.
 #### DOWNLOAD_POPUP_MENU_KILL_DOWNLOAD=Kill Download
 DOWNLOAD_POPUP_MENU_KILL_DOWNLOAD=Stop download
 #### DOWNLOAD_POPUP_MENU_RESUME=Force Resume
-DOWNLOAD_POPUP_MENU_RESUME=Voorzeer Hervatten
+DOWNLOAD_POPUP_MENU_RESUME=Voorzeer download
 #### DOWNLOAD_POPUP_MENU_LAUNCH=Preview File
 DOWNLOAD_POPUP_MENU_LAUNCH=Speel af
 #### DOWNLOAD_POPUP_MENU_CHAT=Chat with Host
@@ -926,9 +926,9 @@ DOWNLOAD_STATUS_WAITING_FOR_USER=Vereist Meer Bronnen
 #### DOWNLOAD_STATUS_WAITING_FOR_CONN=Waiting for Stable Connections
 DOWNLOAD_STATUS_WAITING_FOR_CONN=Wachten op Stabiele Verbindingen
 #### DOWNLOAD_HOSTS_LABEL=hosts
-DOWNLOAD_HOSTS_LABEL=host
+DOWNLOAD_HOSTS_LABEL=hosts
 #### DOWNLOAD_HOST_LABEL=host
-#? DOWNLOAD_HOST_LABEL=
+DOWNLOAD_HOST_LABEL=host
 #### DOWNLOAD_STATUS_REMOTE_QUEUED=Waiting in Line, Position
 DOWNLOAD_STATUS_REMOTE_QUEUED=In de wachtrij gezet bij
 #### DOWNLOAD_STATUS_HASHING=Verifying File Contents...
@@ -940,29 +940,29 @@ DOWNLOAD_STATUS_PAUSING=Pauzeren...
 #### DOWNLOAD_STATUS_PAUSED=Paused
 DOWNLOAD_STATUS_PAUSED=Gepauzeerd
 #### DOWNLOAD_AWAITING_SOURCES=A more specific search may be required...
-DOWNLOAD_AWAITING_SOURCES=Een specifieker zoekopdracht kan worden vereist...
+DOWNLOAD_AWAITING_SOURCES=Een specifieke zoekopdracht kan worden vereist...
 #### DOWNLOAD_APPLY_NEW_THEME_START=You have downloaded a new skin titled "
-DOWNLOAD_APPLY_NEW_THEME_START=U hebt een nieuwe gedownload genaamd "
+DOWNLOAD_APPLY_NEW_THEME_START=U hebt een nieuwe skin gedownload genaamd "
 #### DOWNLOAD_APPLY_NEW_THEME_END=." Would you like to use this new skin?
-DOWNLOAD_APPLY_NEW_THEME_END=." Wil je deze gebruiken
+DOWNLOAD_APPLY_NEW_THEME_END=." Wilt U deze gebruiken
 #### DOWNLOAD_POSSIBLE_HOSTS=Possible Hosts
 DOWNLOAD_POSSIBLE_HOSTS=Mogelijke host
 #### DOWNLOAD_BUSY_HOSTS=Busy Hosts
-DOWNLOAD_BUSY_HOSTS=Bezetten host
+DOWNLOAD_BUSY_HOSTS=Host is bezig
 #### DOWNLOAD_QUEUED_HOSTS=Remotely Queued
 DOWNLOAD_QUEUED_HOSTS=Op afstand in de rij gezet
 #### DOWNLOAD_SEARCHING=Locating Sources...
 DOWNLOAD_SEARCHING=Plaatsbepaling Bronnen... 
 #### DOWNLOAD_COULD_NOT_READ_SNAPSHOT=Sorry, but LimeWire was unable to restart your old downloads.
-DOWNLOAD_COULD_NOT_READ_SNAPSHOT=Sorry, maar LimeWire kon de oude downloads niet opstarten
+DOWNLOAD_COULD_NOT_READ_SNAPSHOT=Sorry, maar LimeWire kon de oude downloads niet herstarten
 #### DOWNLOAD_MAGNET_DIALOG=Would you like to download
 DOWNLOAD_MAGNET_DIALOG=Wilt U downloaden
 #### DOWNLOAD_FROM=from
 DOWNLOAD_FROM=van
 #### DOWNLOAD_MAGNET_DIALOG_END=?
-DOWNLOAD_MAGNET_DIALOG_END=
+DOWNLOAD_MAGNET_DIALOG_END=Einde dialoog
 #### DOWNLOAD_HASH_ONLY_MAGNET=LimeWire will not be able to start the download you have selected unless you start a search for it.
-DOWNLOAD_HASH_ONLY_MAGNET=LimeWire zal de download niet kunnen beginnen die u hebt geselecteerd tenzij u een onderzoek er naar begint.
+DOWNLOAD_HASH_ONLY_MAGNET=LimeWire kan de download niet beginnen die u hebt geselecteerd tenzij u een er een zoekopdracht naar start.
 #### DOWNLOAD_PRIORITY_ACTIVE=Active
 DOWNLOAD_PRIORITY_ACTIVE=Actief
 #### DOWNLOAD_PRIORITY_UP_BUTTON_TIP=Move the selected download closer to becoming active
@@ -970,7 +970,7 @@ DOWNLOAD_PRIORITY_UP_BUTTON_TIP=Verplaats de geselecteerde download dichter bij 
 #### DOWNLOAD_PRIORITY_DOWN_BUTTON_TIP=Move the selected download further from becoming active
 DOWNLOAD_PRIORITY_DOWN_BUTTON_TIP=Verplaats de geselecteerde download verder om actief te worden
 #### DOWNLOAD_PRIORITY_PRIORITIZE=Queue
-DOWNLOAD_PRIORITY_PRIORITIZE=Rij
+DOWNLOAD_PRIORITY_PRIORITIZE=[Rij instelling]
 
 ###################################################################
 # Key/value pairs for UploadView
@@ -1342,7 +1342,7 @@ GO_PRO_TIP=Stap nu over naar LimeWire Pro.
 #### WHYGOPRO=Why
 WHYGOPRO=Waarom Pro
 #### WHYGOPRO_TIP=What does PRO give me?
-WHYGOPRO_TIP=Wat biedt LimeWire Pro extra
+WHYGOPRO_TIP=Wat biedt LimeWire Pro extra?
 #### GO_PRO_LATER=Later
 GO_PRO_LATER=Later
 #### GO_PRO_LATER_TIP=Get LimeWire PRO Later
@@ -1535,7 +1535,7 @@ SPLASH_STATUS_INTERFACE=Gebruikersscherm wordt geladen...
 #### SPLASH_STATUS_UPDATES=Checking for updates...
 SPLASH_STATUS_UPDATES=Op zoek naar updates...
 #### SPLASH_STATUS_CORE_COMPONENTS=Loading core components...
-SPLASH_STATUS_CORE_COMPONENTS=Basiscomponenten worden geladen...
+SPLASH_STATUS_CORE_COMPONENTS=Standaard componenten worden geladen...
 #### SPLASH_STATUS_DOWNLOAD_WINDOW=Loading download window...
 SPLASH_STATUS_DOWNLOAD_WINDOW='Download'-scherm wordt geladen...
 #### SPLASH_STATUS_LIBRARY_WINDOW=Loading library window...
@@ -1631,7 +1631,7 @@ UPDATE_DIALOG_CAPTION=Vernieuw LimeWire
 #### UPDATE_MESSAGE=A newer version of LimeWire was detected on the network. Please update to version
 UPDATE_MESSAGE=Een nieuwere versie van LimeWire werd ontdekt op het netwerk. Gelieve te updaten
 #### UPDATE_MESSAGE_SMALL=A newer version is available, update?
-UPDATE_MESSAGE_SMALL=Een nieuwere versie is beschikbaar, update
+UPDATE_MESSAGE_SMALL=Een nieuwere versie is beschikbaar, updaten?
 #### UPDATE_SUCCEEDED_MESSAGE=Your LimeWire update has successfully completed. Please restart LimeWire to use your new version.
 UPDATE_SUCCEEDED_MESSAGE=Het vernieuwen is gelukt. Herstart LimeWire om de vernieuwde versie te gebruiken.
 #### UPDATE_WEB_PAGE_ERROR_MESSAGE=There was an error opening the LimeWire web page for performing the update. To complete your update, please open your browser to http://www.limewire.com.
@@ -1946,7 +1946,7 @@ OPTIONS_DOWNLOAD_MAIN_TITLE=Downloaden
 #### OPTIONS_UPLOAD_MAIN_TITLE=Uploads
 OPTIONS_UPLOAD_MAIN_TITLE=Uploaden
 #### OPTIONS_UPLOAD_BASIC_MAIN_TITLE=Basic
-OPTIONS_UPLOAD_BASIC_MAIN_TITLE=Basis
+OPTIONS_UPLOAD_BASIC_MAIN_TITLE=Standaard
 #### OPTIONS_UPLOAD_SLOTS_MAIN_TITLE=Slots
 OPTIONS_UPLOAD_SLOTS_MAIN_TITLE=Beperkingen
 #### OPTIONS_CONNECTIONS_MAIN_TITLE=Connections
@@ -1972,7 +1972,7 @@ OPTIONS_GUI_MAIN_TITLE=Gebruikersscherm
 #### OPTIONS_POPUPS_MAIN_TITLE=Popups
 OPTIONS_POPUPS_MAIN_TITLE=Popups
 #### OPTIONS_AUTOCOMPLETE_MAIN_TITLE=Autocomplete Text
-OPTIONS_AUTOCOMPLETE_MAIN_TITLE=Automaties tekst aanvullen
+OPTIONS_AUTOCOMPLETE_MAIN_TITLE=Automatisch tekst aanvullen
 #### OPTIONS_THEME_MAIN_TITLE=Skin
 OPTIONS_THEME_MAIN_TITLE=Skin
 #### OPTIONS_SKIN_MAIN_TITLE=Skin
@@ -2026,9 +2026,9 @@ OPTIONS_LOCALIZE_COUNTRY_BOX_LABEL=Land
 # in the options window
 ################################################################################
 #### OPTIONS_SAVE_ON_CLOSE=You have made changes to some settings. Would you like to save these changes?
-OPTIONS_SAVE_ON_CLOSE=U hebt veranderingen in sommige instellingen aangebracht. Wilt u deze bewaren
+OPTIONS_SAVE_ON_CLOSE=U hebt veranderingen in sommige instellingen aangebracht. Wilt u deze bewaren?
 #### OPTIONS_SAVE_DIR_TITLE=Save Directory
-OPTIONS_SAVE_DIR_TITLE=Doeldirectory
+OPTIONS_SAVE_DIR_TITLE=Bewaar directory
 #### OPTIONS_SAVE_DIR_LABEL=You can choose the directory for saving files.
 OPTIONS_SAVE_DIR_LABEL=De directory waarin nieuwe bestanden worden opslagen.
 #### OPTIONS_SAVE_DIR_BOX_LABEL=Directory:
@@ -2334,7 +2334,7 @@ OPTIONS_ALWAYS_USE_ANSWER=Gebruik altijd dit antwoord
 #### OPTIONS_POPUPS_TITLE=Popups
 OPTIONS_POPUPS_TITLE=Popups
 #### OPTIONS_POPUPS_LABEL=Redisplay messages for which you have chosen 'Do not display this message again' or 'Always use this answer'.
-OPTIONS_POPUPS_LABEL=Redisplay berichten waarvoor u hebt gekozen 'Laat dit bericht niet meer zien' of 'Gebruik altijd dit antwoord'.
+OPTIONS_POPUPS_LABEL=Berichten herzien waarvoor u hebt gekozen zoals 'Laat dit bericht niet meer zien' of 'Gebruik altijd dit antwoord'.
 #### OPTIONS_POPUPS_DISPLAY_CHECK_BOX_LABEL=Revert To Default
 OPTIONS_POPUPS_DISPLAY_CHECK_BOX_LABEL=Keer terug naar standaard
 
@@ -2343,11 +2343,11 @@ OPTIONS_POPUPS_DISPLAY_CHECK_BOX_LABEL=Keer terug naar standaard
 # search textfield
 ################################################################################
 #### OPTIONS_AUTOCOMPLETE_TITLE=Autocomplete
-OPTIONS_AUTOCOMPLETE_TITLE=Automaties
+OPTIONS_AUTOCOMPLETE_TITLE=Automatisch
 #### OPTIONS_AUTOCOMPLETE_LABEL=You can enable or disable autocompletion of text fields
-OPTIONS_AUTOCOMPLETE_LABEL=Je kunt automaties aanvullen tekstveld aan- of uitzetten
+OPTIONS_AUTOCOMPLETE_LABEL=Je kunt Automatisch aanvullen tekstveld aan- of uitzetten
 #### OPTIONS_AUTOCOMPLETE_DISPLAY_CHECK_BOX_LABEL=Enable Autocompletion of Text Fields
-OPTIONS_AUTOCOMPLETE_DISPLAY_CHECK_BOX_LABEL=Aanzetten automaties aanvullen tekstveld
+OPTIONS_AUTOCOMPLETE_DISPLAY_CHECK_BOX_LABEL=Aanzetten Automatisch aanvullen tekstveld
 
 ################################################################################
 # Key/Value pairs for theme options
@@ -4017,3 +4017,4 @@ ALL_OOB_BYPASSED=Gemeden reacties
 STATS_OOB_THROUGHPUT_TITLE=OOB Succes Rate
 #### STATS_OOB_THROUGHPUT_LABEL=Number of Responses Requested and Received via the OOB Protocol
 STATS_OOB_THROUGHPUT_LABEL=Aantal Reacties Gevraagd die via het Protocol OOB worden ontvangen
+
