Minor fixes of mnemonics

--- a/lib/messagebundles/MessagesBundle_br.properties
+++ b/lib/messagebundles/MessagesBundle_br.properties
@@ -265,8 +265,8 @@ TRAY_EXIT_LABEL=Hent er-maez
 ################################################################################
 #### MENU_FILE_TITLE=File
 MENU_FILE_TITLE=Restr
-#### MENU_FILE_TITLE_MNEMONIC=R
-#? MENU_FILE_TITLE_MNEMONIC=
+#### MENU_FILE_TITLE_MNEMONIC=F
+MENU_FILE_TITLE_MNEMONIC=R
 #### MENU_FILE_CLOSE=Close
 MENU_FILE_CLOSE=Serriñ
 #### MENU_FILE_CLOSE_MNEMONIC=C
@@ -369,8 +369,8 @@ MENU_FILE_LIBRARY_DELETE_FILES=Dilemel restr(ok)
 
 #### MENU_VIEW_TITLE=View
 MENU_VIEW_TITLE=Gwel
-#### MENU_VIEW_TITLE_MNEMONIC=G
-#? MENU_VIEW_TITLE_MNEMONIC=
+#### MENU_VIEW_TITLE_MNEMONIC=V
+MENU_VIEW_TITLE_MNEMONIC=G
 #### MENU_VIEW_SMALL_ICONS=Use Small Icons
 #? MENU_VIEW_SMALL_ICONS=
 #### MENU_VIEW_SMALL_ICONS_MNEMONIC=S
