--- a/lib/messagebundles/MessagesBundle_el.properties
+++ b/lib/messagebundles/MessagesBundle_el.properties
@@ -58,9 +58,9 @@ GENERAL_CLOSE_BUTTON_LABEL=K\u03bb\u03b5\u03af\u03c3\u03b9\u03bc\u03bf
 #### GENERAL_CLOSE_BUTTON_TIP=Close the Window.
 GENERAL_CLOSE_BUTTON_TIP=K\u03bb\u03b5\u03af\u03c3\u03b9\u03bc\u03bf \u03a0\u03b1\u03c1\u03b1\u03b8\u03cd\u03c1\u03bf\u03c5
 #### GENERAL_BACK_BUTTON_LABEL=<< Back
-GENERAL_BACK_BUTTON_LABEL=\ufffd \u03a0\u03c1\u03bf\u03b7\u03b3\u03bf\u03cd\u03bc\u03b5\u03bd\u03bf
+GENERAL_BACK_BUTTON_LABEL=<<\u03a0\u03c1\u03bf\u03b7\u03b3\u03bf\u03cd\u03bc\u03b5\u03bd\u03bf
 #### GENERAL_NEXT_BUTTON_LABEL=Next >>
-GENERAL_NEXT_BUTTON_LABEL=E\u03c0\u03cc\u03bc\u03b5\u03bd\u03bf \ufffd
+GENERAL_NEXT_BUTTON_LABEL=E\u03c0\u03cc\u03bc\u03b5\u03bd\u03bf>>
 #### GENERAL_FINISH_BUTTON_LABEL=Finish
 GENERAL_FINISH_BUTTON_LABEL=T\u03ad\u03bb\u03bf\u03c2
 #### GENERAL_DEFAULT_BUTTON_LABEL=Use Default
