--- a/lib/messagebundles/MessagesBundle_ru.properties
+++ b/lib/messagebundles/MessagesBundle_ru.properties
@@ -1,5 +1,5 @@
 ################################################################################
-# Messages Bundle for LimeWire 4.2.6
+# Messages Bundle for LimeWire
 # Specialization for: Russian - Russia
 # Translated by Eugene Romanenko <eros2@os2.ru>
 ################################################################################
@@ -68,7 +68,7 @@ GENERAL_DEFAULT_BUTTON_LABEL=\u0423\u043c\u043e\u043b\u0447\u0430\u043d\u0438\u0
 #### GENERAL_BROWSE_BUTTON_LABEL=Browse...
 GENERAL_BROWSE_BUTTON_LABEL=\u041f\u0440\u043e\u0441\u043c\u043e\u0442\u0440...
 #### GENERAL_BROWSE_HOST_LABEL=Browse Host
-GENERAL_BROWSE_HOST_LABEL=\u041f\u0440\u043e\u0441\u043c\u043e\u0442\u0440\u0435\u0442\u044c \u0445\u043e\u0441\u0442\u0430
+GENERAL_BROWSE_HOST_LABEL=\u041f\u0440\u043e\u0441\u043c\u043e\u0442\u0440\u0435\u0442\u044c \u0445\u043e\u0441\u0442
 #### GENERAL_BROWSE_HOST_TIP=View All Files on the Selected Computer
 GENERAL_BROWSE_HOST_TIP=\u041f\u0440\u043e\u0441\u043c\u043e\u0442\u0440\u0435\u0442\u044c \u0432\u0441\u0435 \u0444\u0430\u0439\u043b\u044b \u043d\u0430 \u0432\u044b\u0431\u0440\u0430\u043d\u043d\u043e\u043c \u043a\u043e\u043c\u043f\u044c\u044e\u0442\u0435\u0440\u0435
 
@@ -76,17 +76,17 @@ GENERAL_BROWSE_HOST_TIP=\u041f\u0440\u043e\u0441\u043c\u043e\u0442\u0440\u0435\u
 # Keys/value pairs for right-click context menus.
 ################################################################################
 #### CONTEXT_MENU_UNDO=Undo
-#? CONTEXT_MENU_UNDO=
+CONTEXT_MENU_UNDO=\u041e\u0442\u043c\u0435\u043d\u0438\u0442\u044c
 #### CONTEXT_MENU_CUT=Cut
-#? CONTEXT_MENU_CUT=
+CONTEXT_MENU_CUT=\u0412\u044b\u0440\u0435\u0437\u0430\u0442\u044c
 #### CONTEXT_MENU_COPY=Copy
-#? CONTEXT_MENU_COPY=
+CONTEXT_MENU_COPY=\u041a\u043e\u043f\u0438\u0440\u043e\u0432\u0430\u0442\u044c
 #### CONTEXT_MENU_PASTE=Paste
-#? CONTEXT_MENU_PASTE=
+CONTEXT_MENU_PASTE=\u0412\u0441\u0442\u0430\u0432\u0438\u0442\u044c
 #### CONTEXT_MENU_DELETE=Delete
-#? CONTEXT_MENU_DELETE=
+CONTEXT_MENU_DELETE=\u0423\u0434\u0430\u043b\u0438\u0442\u044c
 #### CONTEXT_MENU_SELECT_ALL=Select All
-#? CONTEXT_MENU_SELECT_ALL=
+CONTEXT_MENU_SELECT_ALL=\u0412\u044b\u0434\u0435\u043b\u0438\u0442\u044c \u0432\u0441\u0451
 
 #Options
 #### OPTIONS_BUTTONS_OK_LABEL=OK
@@ -567,7 +567,7 @@ SEARCH_WISHLIST_BUTTON_LABEL=\u0414\u043e\u0431\u0430\u0432\u0438\u0442\u044c \u
 #### SEARCH_WISHLIST_BUTTON_TIP=Spawn a "LimeWire Robot" to Look for the Content
 SEARCH_WISHLIST_BUTTON_TIP=\u0417\u0430\u043f\u0443\u0441\u0442\u0438\u0442\u044c "\u0440\u043e\u0431\u043e\u0442\u0430 LimeWire" \u0434\u043b\u044f \u043f\u043e\u0438\u0441\u043a\u0430 \u0436\u0435\u043b\u0430\u0435\u043c\u043e\u0433\u043e \u043a\u043e\u043d\u0442\u0435\u043d\u0442\u0430
 #### SEARCH_BROWSE_HOST_BUTTON_LABEL=Browse Host
-SEARCH_BROWSE_HOST_BUTTON_LABEL=\u041f\u0440\u043e\u0441\u043c\u043e\u0442\u0440\u0435\u0442\u044c \u0445\u043e\u0441\u0442\u0430
+SEARCH_BROWSE_HOST_BUTTON_LABEL=\u041f\u0440\u043e\u0441\u043c\u043e\u0442\u0440\u0435\u0442\u044c \u0445\u043e\u0441\u0442
 #### SEARCH_BROWSE_HOST_BUTTON_TIP=View All Files on Selected Computer
 SEARCH_BROWSE_HOST_BUTTON_TIP=\u041f\u0440\u043e\u0441\u043c\u043e\u0442\u0440\u0435\u0442\u044c \u0432\u0441\u0435 \u0444\u0430\u0439\u043b\u044b \u043d\u0430 \u0432\u044b\u0431\u0440\u0430\u043d\u043d\u043e\u043c \u043a\u043e\u043c\u043f\u044c\u044e\u0442\u0435\u0440\u0435
 #### SEARCH_CHAT_BUTTON_LABEL=Chat...
@@ -593,7 +593,7 @@ SEARCH_PUBLIC_LAUNCH_STRING=\u0412\u044b\u043f\u043e\u043b\u043d\u0438\u0442\u04
 #### SEARCH_PUBLIC_STOP_STRING=Stop Search
 SEARCH_PUBLIC_STOP_STRING=\u041e\u0441\u0442\u0430\u043d\u043e\u0432\u0438\u0442\u044c \u043f\u043e\u0438\u0441\u043a
 #### SEARCH_PUBLIC_BROWSE_STRING=Browse Host
-SEARCH_PUBLIC_BROWSE_STRING=\u041f\u0440\u043e\u0441\u043c\u043e\u0442\u0440\u0435\u0442\u044c \u0445\u043e\u0441\u0442\u0430
+SEARCH_PUBLIC_BROWSE_STRING=\u041f\u0440\u043e\u0441\u043c\u043e\u0442\u0440\u0435\u0442\u044c \u0445\u043e\u0441\u0442
 #### SEARCH_PUBLIC_CHAT_STRING=Chat With Host
 SEARCH_PUBLIC_CHAT_STRING=\u0427\u0430\u0442 \u0441 \u0445\u043e\u0441\u0442\u043e\u043c
 #### SEARCH_PUBLIC_BITZI_LOOKUP_STRING=Bitzi Web Lookup...
@@ -641,7 +641,7 @@ SEARCH_BROWSEHOST_DESC=\u0412\u0432\u0435\u0434\u0438\u0442\u0435 IP-\u0430\u043
 #### SEARCH_BROWSEHOST_MYIP=When your friends want to connect to you, they should enter
 SEARCH_BROWSEHOST_MYIP=\u0415\u0441\u043b\u0438 \u0432\u0430\u0448\u0438 \u0434\u0440\u0443\u0437\u044c\u044f \u0437\u0430\u0445\u043e\u0442\u044f\u0442 \u043f\u043e\u0434\u043a\u043b\u044e\u0447\u0438\u0442\u044c\u0441\u044f \u043a \u0432\u0430\u043c, \u043e\u043d\u0438 \u0434\u043e\u043b\u0436\u043d\u044b \u0431\u0443\u0434\u0443\u0442 \u0432\u0432\u0435\u0441\u0442\u0438
 #### SEARCH_BROWSEHOST_FIREWALLED=Your computer is behind a firewall or router and cannot receive direct connections.
-#? SEARCH_BROWSEHOST_FIREWALLED=
+SEARCH_BROWSEHOST_FIREWALLED=\u0412\u0430\u0448 \u043a\u043e\u043c\u043f\u044c\u044e\u0442\u0435\u0440 \u043d\u0430\u0445\u043e\u0434\u0438\u0442\u0441\u044f \u0437\u0430 \u0444\u0430\u0439\u0440\u0432\u043e\u043b\u043b\u043e\u043c \u0438\u043b\u0438 \u043c\u0430\u0440\u0448\u0440\u0443\u0442\u0438\u0437\u0430\u0442\u043e\u0440\u043e\u043c \u0438 \u043d\u0435 \u043c\u043e\u0436\u0435\u0442 \u043f\u0440\u0438\u043d\u0438\u043c\u0430\u0442\u044c \u0432\u0445\u043e\u0434\u044f\u0449\u0438\u0435 \u0441\u043e\u0435\u0434\u0438\u043d\u0435\u043d\u0438\u044f.
 #### SEARCH_BROWSEHOST_BUTTON=Direct Connect
 SEARCH_BROWSEHOST_BUTTON=\u041f\u0440\u044f\u043c\u043e\u0435 \u0441\u043e\u0435\u0434\u0438\u043d\u0435\u043d\u0438\u0435
 #### SEARCH_WHATSNEW_HIDE_ADULT=Hide Adult Content
@@ -703,7 +703,7 @@ RESULT_PANEL_VENDOR=\u0412\u0435\u043d\u0434\u043e\u0440
 #### RESULT_PANEL_ADDED=Created
 RESULT_PANEL_ADDED=\u0421\u043e\u0437\u0434\u0430\u043d\u043e
 #### RESULT_PANEL_LICENSE=License
-#? RESULT_PANEL_LICENSE=
+RESULT_PANEL_LICENSE=\u041b\u0438\u0446\u0435\u043d\u0437\u0438\u044f
 
 #Filter labels.
 #### SEARCH_FILTER_ALL=All
@@ -769,7 +769,7 @@ LIBRARY_RESUME_BUTTON_LABEL=\u0412\u043e\u0437\u043e\u0431\u043d\u043e\u0432\u04
 #### LIBRARY_RESUME_BUTTON_TIP=Continue Downloading Selected Incomplete File
 LIBRARY_RESUME_BUTTON_TIP=\u041f\u0440\u043e\u0434\u043e\u043b\u0436\u0438\u0442\u044c \u0437\u0430\u0433\u0440\u0443\u0437\u043a\u0443 \u0432\u044b\u0431\u0440\u0430\u043d\u043d\u043e\u0433\u043e \u043d\u0435\u0434\u043e\u0437\u0430\u0433\u0440\u0443\u0436\u0435\u043d\u043d\u043e\u0433\u043e \u0444\u0430\u0439\u043b\u0430
 #### LIBRARY_RENAME_BUTTON_LABEL=Rename
-#? LIBRARY_RENAME_BUTTON_LABEL=
+LIBRARY_RENAME_BUTTON_LABEL=\u041f\u0435\u0440\u0435\u0438\u043c\u0435\u043d\u043e\u0432\u0430\u0442\u044c
 
 #### PLAYLIST_LOAD_BUTTON_LABEL=Open...
 PLAYLIST_LOAD_BUTTON_LABEL=\u041e\u0442\u043a\u0440\u044b\u0442\u044c...
@@ -874,7 +874,7 @@ DOWNLOAD_POPUP_MENU_LAUNCH=\u041f\u0440\u043e\u0441\u043c\u043e\u0442\u0440 \u04
 #### DOWNLOAD_POPUP_MENU_CHAT=Chat with Host
 DOWNLOAD_POPUP_MENU_CHAT=\u0427\u0430\u0442 \u0441 \u0445\u043e\u0441\u0442\u043e\u043c
 #### DOWNLOAD_POPUP_MENU_BROWSE=Browse Host
-DOWNLOAD_POPUP_MENU_BROWSE=\u041f\u0440\u043e\u0441\u043c\u043e\u0442\u0440\u0435\u0442\u044c \u0445\u043e\u0441\u0442\u0430
+DOWNLOAD_POPUP_MENU_BROWSE=\u041f\u0440\u043e\u0441\u043c\u043e\u0442\u0440\u0435\u0442\u044c \u0445\u043e\u0441\u0442
 #### DOWNLOAD_PRIORITY_COLUMN=Priority
 DOWNLOAD_PRIORITY_COLUMN=\u041f\u0440\u0438\u043e\u0440\u0438\u0442\u0435\u0442
 #### DOWNLOAD_NAME_COLUMN=Name
@@ -1151,7 +1151,7 @@ CV_STRING_CLIENT=[\u041b\u0438\u0441\u0442]
 #### CV_STRING_ULTRAPEER=Ultrapeer
 CV_STRING_ULTRAPEER=[Ultrapeer]
 #### CV_STRING_STATUS=Connection Status:
-#? CV_STRING_STATUS=
+CV_STRING_STATUS=\u0421\u0442\u0430\u0442\u0443\u0441 \u0441\u043e\u0435\u0434\u0438\u043d\u0435\u043d\u0438\u044f:
 #### CV_TABLE_STRING_KBPSEC=KB/s
 CV_TABLE_STRING_KBPSEC=KB/\u0441\u0435\u043a
 #### CV_ADD_HOST_LABEL=Host:
@@ -1183,7 +1183,7 @@ LIBRARY_TABLE_HITCOUNT=\u0425\u0438\u0442\u044b
 #### LIBRARY_TABLE_NUMALTLOC=Locations
 LIBRARY_TABLE_NUMALTLOC=\u0420\u0430\u0441\u043f\u043e\u043b\u043e\u0436\u0435\u043d\u0438\u044f
 #### LIBRARY_TABLE_LICENSE=License
-#? LIBRARY_TABLE_LICENSE=
+LIBRARY_TABLE_LICENSE=\u041b\u0438\u0446\u0435\u043d\u0437\u0438\u044f
 #### LIBRARY_TABLE_UPLOAD_COUNT=Uploads
 LIBRARY_TABLE_UPLOAD_COUNT=\u0412\u044b\u0433\u0440\u0443\u0437\u043a\u0438
 #### LIBRARY_TREE_NEW_FOLDER_LABEL=New Folder
@@ -1272,7 +1272,7 @@ SETUP_STARTUP_LABEL=\u0425\u043e\u0442\u0438\u0442\u0435 \u043b\u0438 \u0432\u04
 #### SETUP_STARTUP_CHECKBOX=Start Automatically
 SETUP_STARTUP_CHECKBOX=\u0417\u0430\u043f\u0443\u0441\u043a\u0430\u0442\u044c \u0430\u0432\u0442\u043e\u043c\u0430\u0442\u0438\u0447\u0435\u0441\u043a\u0438
 #### SETUP_FIREWALL_TITLE_ONE=Firewall Preparation
-#? SETUP_FIREWALL_TITLE_ONE=
+SETUP_FIREWALL_TITLE_ONE=\u041e\u043f\u0440\u0435\u0434\u0435\u043b\u0435\u043d\u0438\u0435 \u043d\u0430\u0441\u0442\u0440\u043e\u0435\u043a/\u043a\u043e\u043d\u0444\u0438\u0433\u0443\u0440\u0430\u0446\u0438\u044f \u0444\u0430\u0439\u0440\u0432\u043e\u043b\u043b\u0430
 #### SETUP_FIREWALL_LABEL_ONE=LimeWire needs to receive information from the network in order to function properly. When you click next, some firewalls will ask your permission for LimeWire to use the network. You should allow LimeWire full access. Below is a picture of Windows Firewall asking to unblock LimeWire. Your firewall software may look different.
 #? SETUP_FIREWALL_LABEL_ONE=
 #### SETUP_FIREWALL_TITLE_TWO=Firewall Warning
@@ -1440,7 +1440,7 @@ META_EDITOR_ACTION_LABEL=\u0414\u0435\u0439\u0441\u0442\u0432\u0438\u0435:
 #### META_EDITOR_STARS_LABEL=Stars:
 META_EDITOR_STARS_LABEL=\u0417\u0432\u0451\u0437\u0434\u044b:
 #### META_EDITOR_LICENSE_LABEL=License:
-#? META_EDITOR_LICENSE_LABEL=
+META_EDITOR_LICENSE_LABEL=\u041b\u0438\u0446\u0435\u043d\u0437\u0438\u044f:
 
 #### META_EDITOR_SIZE_LABEL=Size:
 META_EDITOR_SIZE_LABEL=\u0420\u0430\u0437\u043c\u0435\u0440:
@@ -1593,9 +1593,9 @@ SPLASH_STATUS_COMPONENT_LOADING_SIMPP_MANAGER=\u0418\u043d\u0438\u0446\u0438\u04
 # Key/value pairs for the shutdown window
 ##################################################################
 #### SHUTDOWN_TITLE=Shutting down LimeWire...
-#? SHUTDOWN_TITLE=
+SHUTDOWN_TITLE=\u0417\u0430\u043a\u0440\u044b\u0442\u0438\u0435 LimeWire...
 #### SHUTDOWN_WAIT=Please wait while LimeWire shuts down...
-#? SHUTDOWN_WAIT=
+SHUTDOWN_WAIT=\u041f\u043e\u0434\u043e\u0436\u0434\u0438\u0442\u0435, \u043f\u043e\u043a\u0430 LimeWire \u0437\u0430\u0432\u0435\u0440\u0448\u0438\u0442 \u0440\u0430\u0431\u043e\u0442\u0443...
 
 ##################################################################
 # Key/value pairs for the message displayed to prompt users to
@@ -1904,9 +1904,9 @@ ERROR_XML_SEARCH_TOO_LARGE=\u0412 \u043f\u043e\u0438\u0441\u043a\u043e\u0432\u04
 # Messages for Creative Commons Licensing
 ################################################################################
 #### LICENSE_CC_VIEW_LICENSE=View License
-#? LICENSE_CC_VIEW_LICENSE=
+LICENSE_CC_VIEW_LICENSE=\u041f\u0440\u043e\u0441\u043c\u043e\u0442\u0440 \u043b\u0438\u0446\u0435\u043d\u0437\u0438\u0438
 #### LICENSE_CC_TITLE=License Details
-#? LICENSE_CC_TITLE=
+LICENSE_CC_TITLE=\u0418\u043d\u0444\u043e\u0440\u043c\u0430\u0446\u0438\u044f \u043e \u043b\u0438\u0446\u0435\u043d\u0437\u0438\u0438
 #### LICENSE_CC_LOCATING=LimeWire is currently locating the details of this license.
 #? LICENSE_CC_LOCATING=
 #### LICENSE_CC_UNVERIFIED=LimeWire has not yet verified this license. Click 'verify' to locate the details of this Creative Commons license.
@@ -2055,7 +2055,7 @@ OPTIONS_PURGE_INCOMPLETE_TIME_NUMBER_LABEL=\u0421\u043a\u043e\u043b\u044c\u043a\
 #### OPTIONS_SHARED_DIRS_TITLE=Shared Directories
 OPTIONS_SHARED_DIRS_TITLE=\u041f\u0430\u043f\u043a\u0438 \u043f\u0435\u0440\u0435\u0434\u0430\u043d\u043d\u044b\u0435 \u0432 \u043e\u0431\u0449\u0438\u0439 \u0434\u043e\u0441\u0442\u0443\u043f
 #### OPTIONS_SHARED_DIRS_LABEL=You can choose the directories for sharing files. Files in these directories are displayed in the library.
-OPTIONS_SHARED_DIRS_LABEL=\u0412\u044b \u043c\u043e\u0436\u0435\u0442\u0435 \u0432\u044b\u0431\u0440\u0430\u0442\u044c \u043f\u0430\u043f\u043a\u0438, \u0434\u043e\u0441\u0442\u0443\u043f \u043a \u043a\u043e\u0442\u043e\u0440\u044b\u043c \u0431\u0443\u0434\u0435\u0442 \u043e\u0442\u043a\u0440\u044b\u0442. \u0424\u0430\u0439\u043b\u044b \u0438\u0437 \u044d\u0442\u0438\u0445 \u043f\u0430\u043f\u043a\u0430\u0445 \u043e\u0442\u043e\u0431\u0440\u0430\u0436\u0430\u044e\u0442\u0441\u044f \u0432 \u0431\u0438\u0431\u043b\u0438\u043e\u0442\u0435\u043a\u0435.
+OPTIONS_SHARED_DIRS_LABEL=\u0412\u044b \u043c\u043e\u0436\u0435\u0442\u0435 \u0432\u044b\u0431\u0440\u0430\u0442\u044c \u043f\u0430\u043f\u043a\u0438, \u0434\u043e\u0441\u0442\u0443\u043f \u043a \u043a\u043e\u0442\u043e\u0440\u044b\u043c \u0431\u0443\u0434\u0435\u0442 \u043e\u0442\u043a\u0440\u044b\u0442. \u0424\u0430\u0439\u043b\u044b \u0438\u0437 \u044d\u0442\u0438\u0445 \u043f\u0430\u043f\u043e\u043a \u043e\u0442\u043e\u0431\u0440\u0430\u0436\u0430\u044e\u0442\u0441\u044f \u0432 \u0431\u0438\u0431\u043b\u0438\u043e\u0442\u0435\u043a\u0435.
 #### OPTIONS_SHARED_DIRS_BOX_LABEL=Directories:
 OPTIONS_SHARED_DIRS_BOX_LABEL=\u041f\u0430\u043f\u043a\u0438:
 #### OPTIONS_SHARED_DIRS_BUTTON_LABEL=Add Directory...
@@ -3882,7 +3882,7 @@ STATS_TOTAL_DOWNSTREAM_BANDWIDTH_LABEL=\u0418\u043d\u0444\u043e\u0440\u043c\u043
 #### UPLOAD_STAT_PUSH_PROXY_FAILED=Failed Push Proxy
 #? UPLOAD_STAT_PUSH_PROXY_FAILED=
 #### UPLOAD_STAT_BROWSE_HOST=Browse Host
-UPLOAD_STAT_BROWSE_HOST=\u041f\u0440\u043e\u0441\u043c\u043e\u0442\u0440\u0435\u0442\u044c \u0445\u043e\u0441\u0442\u0430
+#? UPLOAD_STAT_BROWSE_HOST=
 #### UPLOAD_STAT_PUSH_PROXY=Push Proxy
 #? UPLOAD_STAT_PUSH_PROXY=
 #### UPLOAD_STAT_UPDATE_FILE=Update File
