Corrected typo (missing h) on "technische" signaled by Michael <MichaelBeutler AT web DOT de>

--- a/lib/messagebundles/MessagesBundle_de.properties
+++ b/lib/messagebundles/MessagesBundle_de.properties
@@ -212,7 +212,7 @@ GETTING_STARTED_CONTENTS=Um mit LimeWire zu beginnen, suchen Sie das Textfeld li
 #### GOING_PRO_TITLE=The Most Advanced File Sharing Program on the Planet!
 GOING_PRO_TITLE=Das am weitesten entwickelte File Sharing Programm!
 #### GOING_PRO_DESCRIPTION=Better search results\nTurbo charged download speeds\nConnections to more sources\nPersonalized tech support\nSix months of free updates
-GOING_PRO_DESCRIPTION=Bessere Suchresultate\nTurbo-beschleunigte Downloadgeschwindigkeit\nVerbindungen zu mehr Quellen\nPersönlicher tecnische Unterstützung\nKostenlose Updates fuer sechs Monate
+GOING_PRO_DESCRIPTION=Bessere Suchresultate\nTurbo-beschleunigte Downloadgeschwindigkeit\nVerbindungen zu mehr Quellen\nPersönlicher technische Unterstützung\nKostenlose Updates fuer sechs Monate
 
 ###################################################################
 # Key/value pairs for the Windows system tray
