*** empty log message ***

--- a/lib/messagebundles/MessagesBundle_en.properties
+++ b/lib/messagebundles/MessagesBundle_en.properties
@@ -11,7 +11,7 @@ LOCALE_VARIANT_CODE=
 LOCALE_VARIANT_NAME=International
 LOCALE_SCRIPT_CODE=Latn
 LOCALE_SCRIPT_NAME=Latin
-LOCALE_ENGLISH_LANGUAGE_NAME=English
+LOCALE_ENGLISH_LANGUAGE_NAME=English (US)
 LOCALE_NSIS_NAME=English
 
 ################################################################################
