--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -933,22 +933,12 @@ SUPPORT_LIMEWIRE_11=Help support sharing of independent media content.
 # Key/value pairs for the update package, displayed when there is an
 # update of LimeWire available
 ################################################################################
-UPDATE_DIALOG_CAPTION=Update LimeWire
-UPDATE_MESSAGE=A newer version of LimeWire was detected on the network. Please update to version
+UPDATE_DIALOG_CAPTION=New Version Available!
 UPDATE_MESSAGE_SMALL=A newer version is available, update?
-UPDATE_SUCCEEDED_MESSAGE=Your LimeWire update has successfully completed. Please restart LimeWire to use your new version.
-UPDATE_WEB_PAGE_ERROR_MESSAGE=There was an error opening the LimeWire web page for performing the update. To complete your update, please open your browser to http://www.limewire.com.
-UPDATE_ERROR_MESSAGE_START=Your LimeWire update has encountered the following error:
-UPDATE_ERROR_MESSAGE_END=Please e-mail LimeWire support at "support@limewire.com" with this error. You can download the new version of LimeWire from www.limewire.com.
-UPDATE_ERROR_ACCESSING_FILE=Error accessing the necessary files on the server.
-UPDATE_ERROR_COMMUNICATING_WITH_SERVER=Error communicating with the server.
-UPDATE_ERROR_LAX_FILE_NOT_FOUND=Error locating your configuration file.
-UPDATE_ERROR_LAX_SECURITY=Error with permissions accessing your file system.
-UPDATE_ERROR_LAX_IO=Error accessing your file system.
-UPDATE_CANCEL_BUTTON_LABEL=Cancel
-UPDATE_CANCEL_BUTTON_TIP=Cancel the Update
-UPDATE_NOW_TIP=Update LimeWire Now
-UPDATE_LATER_TIP=Update LimeWire Later
+UPDATE_TITLE=A new version of LimeWire is available.
+UPDATE_LATER_LABEL=Update Later
+UPDATE_NOW_LABEL=Update Now
+UPDATE_TIP=Visit http://www.limewire.com to update!
 
 ################################################################################
 # Key/Value pairs for other messages displayed to the user
