More accurate description of the Connections tab.

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -172,7 +172,7 @@ UPLOAD_TITLE=Uploads
 ################################################################################
 SEARCH_TIP=Search and Download Files
 MONITOR_TIP=View Searches and Uploads
-CONNECTIONS_TIP=Connect to Other Clients
+CONNECTIONS_TIP=Show Connections to Other Clients
 LIBRARY_TIP=View Repository of Saved Files
 
 ################################################################################
